--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel \"./src/index.html\"",
-    "build": "dotenv parcel build --public-url . \"./src/index.html\""
+    "startmaintenance": "parcel \"./src/maintenance.html\"",
+    "starterror": "parcel \"./src/error.html\"",
+    "buildmaintenance": "dotenv parcel build --public-url . \"./src/maintenance.html\"",
+    "builderror": "dotenv parcel build --public-url . \"./src/error.html\"",
+    "build": "npm run buildmaintenance && npm run builderror"
   },
   "repository": {
     "type": "git",
@@ -25,8 +28,5 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-inliner": "^1.0.16",
     "parcel-plugin-url-loader": "^1.3.1"
-  },
-  "dependencies": {
-    "sass": "^1.32.12"
   }
 }
