add /healthz return 200

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,11 +14,18 @@ server {
         return 503;
       }
     }
+    location /healthz {
+      rewrite ^(.*)$ /health/healthz.html break;
+             return 200;
+
+    }
+    location = /favicon.ico {
+	 log_not_found off;
+    }
 
     # redirect server error pages to the static page /50x.html
     #
     error_page   500 502 503 504 444 @maintenance;
-
     location @maintenance {
       rewrite ^(.*)$ /index.html break;
       # paths should be rewritten to root
